# invisible_ink

./: .gitignore  pyproject.toml
data/: invisible_ink.docx  mail_text.txt  test.docx
src/invisible_ink/: main.py  pseudocode.txt
src/invisible_ink/helpers/: impexp.py  vigenere.py
tests/: test_impexp.py  test_main.py  test_vigenere.py
