[project]
name = "invisible-ink"
version = "0.1.0"
description = ""
authors = [
    {name = "phill",email = "phillip.rein@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "python-docx (>=1.1.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "invisible_ink", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
